[gd_scene load_steps=3 format=3 uid="uid://bncqenfp5l5ig"]

[ext_resource type="Script" uid="uid://daqtg03u1n4fs" path="res://scripts/editor_ui.gd" id="1_7k3nc"]
[ext_resource type="Texture2D" uid="uid://dnq0xuptr43kx" path="res://assets/background.png" id="2_41ahv"]

[node name="EditorUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7k3nc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -262.0
offset_top = 10.0
offset_right = -12.0
offset_bottom = 207.0
grow_horizontal = 0

[node name="ClearSceneButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "CLEAR SCENE"

[node name="IntersectionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "INTERSECTIONS"

[node name="EdgesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "EDGES"

[node name="GenerateJSONButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "GENERATE JSON"

[node name="LoadJSONButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "LOAD JSON"

[node name="LoadJSONSelector" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(350, 450)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_41ahv")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="LoadJSONSelector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="LoadJSONSelector/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="LoadJSONSelector/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Load JSON files with level"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tree" type="Tree" parent="LoadJSONSelector/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="LoadJSONSelector/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LOAD"

[connection signal="pressed" from="VBoxContainer/IntersectionsButton" to="." method="intersections_button_pressed"]
[connection signal="pressed" from="VBoxContainer/EdgesButton" to="." method="edges_button_pressed"]
